# dirhash-rs

./: .gitignore  Cargo.toml  readme.md  test_config.toml.template
.cargo/: config.toml
benches/: my_benchmark.rs  pathhashlist_benchmark.rs  pathhashlist_divan.rs
src/: dirhash.rs  error.rs  filehash.rs  filelisthash.rs  hashtable.rs  lib.rs  main.rs  pathhash.rs  pathhashlist.rs  test_config.rs
tests/: dirhash_tests.rs  ord_characterization_tests.rs  pathhashlist_tests.rs  rs_vs_sh.rs  walkdir_characterization_tests.rs
tests/common/: mod.rs
