[package]
name = "dirhash-rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "my_benchmark"
harness = false
required-features = ["test-mocks"]

[dependencies]
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.14.0"

[features]
test-mocks = []
