[package]
name = "dirhash-rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "pathhashlist_benchmark"
harness = false
required-features = ["test-mocks"]

[[bench]]
name = "pathhashlist_divan"
harness = false
required-features = ["test-mocks"]

[dependencies]
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = "2.0.12"
rand = "0.9.2"

[dev-dependencies]
divan = "0.1.17"
criterion = "0.5.1"
tempfile = "3.14.0"

[features]
test-mocks = []

[profile.profiling]
inherits = "release"
debug = true
